# Chatravichar

./: BADGES.md  CHANGELOG.md  FEATURES.md  MODELS.md  QUICKSTART.md  RAG_CONFIG.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  app.py  config.json.example  dependencies.txt  flow.txt  idea.md  main.py  pyproject.toml  pytest.ini  requirements.txt  rules.md  setup.sh  tagline.txt  tree.txt
docs/: API.md  ARCHITECTURE.md  USAGE.md
note_forge/: __init__.py  graph.py  knowledge_base.py  nodes.py  state.py
tests/: README.md  test_agent.py
